added mod button to forums and built forum rename code

--- a/media/scss/forums.scss
+++ b/media/scss/forums.scss
@@ -11,6 +11,13 @@
   display: block;
 }
 
+.page-forum {
+  .modDropdown {
+    //right: 12px;/
+    float:right;
+  }
+}
+
 .table.subforums {
 
   .row {
