--- a/media/scss/main.scss
+++ b/media/scss/main.scss
@@ -405,9 +405,9 @@ a.sprite[target="_blank"]:after {
 
 .curse {
   font-weight: bold;
-  @include filter(blur(2px));
-  //color:transparent;
-  //text-shadow:0 0 0.5em #ccc, 0 0 0.5em #ccc;
+  @include filter(blur(1px));
+  color:transparent;
+  text-shadow:0 0 0.25em #ccc, 0 0 0.5em #ccc;
 }
 
 input {
