--- a/media/css/main.css
+++ b/media/css/main.css
@@ -98,13 +98,14 @@ h2 {
   margin: 0 0 0.5em 0;
   float: left;
   clear: both;
+  color: #555;
 }
-/* line 74, ../scss/main.scss */
+/* line 75, ../scss/main.scss */
 h2 a {
   color: #767676;
 }
 
-/* line 79, ../scss/main.scss */
+/* line 80, ../scss/main.scss */
 ul.pageNav {
   display: inline-block;
   color: #7d7d7d;
@@ -113,33 +114,33 @@ ul.pageNav {
   padding: 0;
   font-weight: bold;
 }
-/* line 87, ../scss/main.scss */
+/* line 88, ../scss/main.scss */
 ul.pageNav.right {
   float: right;
   position: relative;
   left: 18px;
 }
-/* line 92, ../scss/main.scss */
+/* line 93, ../scss/main.scss */
 ul.pageNav.right li {
   padding: 0 0 0 0.5em;
 }
-/* line 97, ../scss/main.scss */
+/* line 98, ../scss/main.scss */
 ul.pageNav li {
   display: inline-block;
   padding: 0 0.5em 0 0;
   font-size: 0.8em;
 }
-/* line 102, ../scss/main.scss */
+/* line 103, ../scss/main.scss */
 ul.pageNav li a {
   color: #7d7d7d;
 }
-/* line 106, ../scss/main.scss */
+/* line 107, ../scss/main.scss */
 ul.pageNav li a:hover {
   background: url(../images/noiseblue.png) repeat left center #25bfff;
   text-decoration: none;
   color: #fff;
 }
-/* line 113, ../scss/main.scss */
+/* line 114, ../scss/main.scss */
 ul.pageNav li a, ul.pageNav li span {
   display: inline-block;
   padding: 0.5em 0.75em;
@@ -149,20 +150,20 @@ ul.pageNav li a, ul.pageNav li span {
   -o-border-radius: 0.5em;
   border-radius: 0.5em;
 }
-/* line 119, ../scss/main.scss */
+/* line 120, ../scss/main.scss */
 ul.pageNav li.firstPage a:before {
   content: '<< ';
 }
-/* line 122, ../scss/main.scss */
+/* line 123, ../scss/main.scss */
 ul.pageNav li.lastPage a:after {
   content: ' >>';
 }
-/* line 126, ../scss/main.scss */
+/* line 127, ../scss/main.scss */
 ul.pageNav li.curPage span {
   background: url(../images/noiseGreyDark.png) repeat left center #e0e0e0;
 }
 
-/* line 135, ../scss/main.scss */
+/* line 136, ../scss/main.scss */
 .tag-vip:before {
   content: url("../images/tags/vip.png") " ";
   display: inline-block;
@@ -171,7 +172,7 @@ ul.pageNav li.curPage span {
   height: 16px;
 }
 
-/* line 135, ../scss/main.scss */
+/* line 136, ../scss/main.scss */
 .tag-mod:before {
   content: url("../images/tags/mod.png") " ";
   display: inline-block;
@@ -180,7 +181,7 @@ ul.pageNav li.curPage span {
   height: 16px;
 }
 
-/* line 135, ../scss/main.scss */
+/* line 136, ../scss/main.scss */
 .tag-admin:before {
   content: url("../images/tags/admin.png") " ";
   display: inline-block;
@@ -189,7 +190,7 @@ ul.pageNav li.curPage span {
   height: 16px;
 }
 
-/* line 135, ../scss/main.scss */
+/* line 136, ../scss/main.scss */
 .tag-dev:before {
   content: url("../images/tags/dev.png") " ";
   display: inline-block;
@@ -198,7 +199,7 @@ ul.pageNav li.curPage span {
   height: 16px;
 }
 
-/* line 135, ../scss/main.scss */
+/* line 136, ../scss/main.scss */
 .tag-super:before {
   content: url("../images/tags/super.png") " ";
   display: inline-block;
@@ -207,7 +208,7 @@ ul.pageNav li.curPage span {
   height: 16px;
 }
 
-/* line 135, ../scss/main.scss */
+/* line 136, ../scss/main.scss */
 .tag-owner:before {
   content: url("../images/tags/owner.png") " ";
   display: inline-block;
@@ -216,25 +217,25 @@ ul.pageNav li.curPage span {
   height: 16px;
 }
 
-/* line 145, ../scss/main.scss */
+/* line 146, ../scss/main.scss */
 .breadcrumbs {
   margin: 0;
   padding: 0;
   display: inline-block;
   float: left;
 }
-/* line 151, ../scss/main.scss */
+/* line 152, ../scss/main.scss */
 .breadcrumbs li {
   display: inline-block;
   list-style: none;
   padding: 0 1em 0 0;
 }
-/* line 156, ../scss/main.scss */
+/* line 157, ../scss/main.scss */
 .breadcrumbs li a {
   color: #25bfff;
   display: inline-block;
 }
-/* line 160, ../scss/main.scss */
+/* line 161, ../scss/main.scss */
 .breadcrumbs li ~ li:before {
   content: '>';
   color: #555;
@@ -246,7 +247,7 @@ ul.pageNav li.curPage span {
   vertical-align: middle;
 }
 
-/* line 174, ../scss/main.scss */
+/* line 175, ../scss/main.scss */
 #chatbox .chats {
   font-size: 0.75em;
   border: 1px solid #d8d8d8;
@@ -262,12 +263,12 @@ ul.pageNav li.curPage span {
   overflow-x: hidden;
   background: url(../images/noisewhite.png) repeat left center white;
 }
-/* line 187, ../scss/main.scss */
+/* line 188, ../scss/main.scss */
 #chatbox .chat a.userLink {
   height: 15px;
   display: inline-block;
 }
-/* line 191, ../scss/main.scss */
+/* line 192, ../scss/main.scss */
 #chatbox .chat a.userLink:before {
   line-height: 1.0;
   vertical-align: bottom;
@@ -275,15 +276,15 @@ ul.pageNav li.curPage span {
   height: 15px;
   display: none;
 }
-/* line 201, ../scss/main.scss */
+/* line 202, ../scss/main.scss */
 #chatbox .chat-date {
   font-style: italic;
 }
-/* line 205, ../scss/main.scss */
+/* line 206, ../scss/main.scss */
 #chatbox .chat ~ .chat-date {
   margin-top: 1em;
 }
-/* line 209, ../scss/main.scss */
+/* line 210, ../scss/main.scss */
 #chatbox input {
   width: 100%;
   border: 1px solid #d8d8d8;
@@ -298,7 +299,7 @@ ul.pageNav li.curPage span {
   border-radius: 0 0 0.5em 0.5em;
 }
 
-/* line 219, ../scss/main.scss */
+/* line 220, ../scss/main.scss */
 .dimensions {
   position: absolute;
   display: inline-block;
@@ -308,22 +309,22 @@ ul.pageNav li.curPage span {
   padding: 0.5em;
   font-size: 0.8em;
 }
-/* line 228, ../scss/main.scss */
+/* line 229, ../scss/main.scss */
 .dimensions:hover {
   color: #fff;
 }
 
-/* line 233, ../scss/main.scss */
+/* line 234, ../scss/main.scss */
 .tinyImage {
   border: 2px solid #a54;
   cursor: pointer;
 }
-/* line 237, ../scss/main.scss */
+/* line 238, ../scss/main.scss */
 .tinyImage.expanded {
   max-width: none;
 }
 
-/* line 242, ../scss/main.scss */
+/* line 243, ../scss/main.scss */
 .missing42 {
   width: 42px;
   height: 42px;
@@ -331,7 +332,7 @@ ul.pageNav li.curPage span {
   background: url("data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAACoAAAAqAQMAAAD/DVsYAAAABlBMVEX4APgAAAAfdBzzAAAAJUlEQVR4Xs3OoQEAAARFwScZy+p/LAlDEKSrB5HW2tLyghselgat1Xgl/EfvxwAAAABJRU5ErkJggg==") no-repeat;
 }
 
-/* line 249, ../scss/main.scss */
+/* line 250, ../scss/main.scss */
 .missing52 {
   width: 42px;
   height: 42px;
@@ -339,22 +340,22 @@ ul.pageNav li.curPage span {
   background: url("data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAADQAAAA0AQMAAAD/tomoAAAABlBMVEX4APgAAAAfdBzzAAAAKUlEQVR4Xt3PQQkAAAjAwIEBjGR1IxlAUEvoQxjce6DlUrHmZAlXfvtpTQiymQ2xdWAAAAAASUVORK5CYII=") no-repeat;
 }
 
-/* line 258, ../scss/main.scss */
+/* line 259, ../scss/main.scss */
 .modButton.active {
   background: url(../images/noiseblue.png) repeat left center #25bfff;
   z-index: 1000;
 }
 
-/* line 265, ../scss/main.scss */
+/* line 266, ../scss/main.scss */
 .modDropdown {
   display: inline-block;
   position: relative;
 }
-/* line 269, ../scss/main.scss */
+/* line 270, ../scss/main.scss */
 .modDropdown:hover {
   background: url(../images/noiseBlackLight.png) repeat left center #636363;
 }
-/* line 290, ../scss/main.scss */
+/* line 291, ../scss/main.scss */
 .modDropdown ul {
   display: none;
   position: absolute;
@@ -367,7 +368,7 @@ ul.pageNav li.curPage span {
   text-align: left;
   background: #222;
 }
-/* line 304, ../scss/main.scss */
+/* line 305, ../scss/main.scss */
 .modDropdown ul li a {
   color: #fff;
   display: block;
@@ -376,12 +377,12 @@ ul.pageNav li.curPage span {
   background: url(../images/noiseblack.png) repeat left center #3b3b3b;
   line-height: 32px;
 }
-/* line 312, ../scss/main.scss */
+/* line 313, ../scss/main.scss */
 .modDropdown ul li a:hover {
   background: url(../images/noiseblue.png) repeat left center #25bfff;
   text-decoration: none;
 }
-/* line 318, ../scss/main.scss */
+/* line 319, ../scss/main.scss */
 .modDropdown ul li.userActions {
   padding: 0 16px;
   line-height: 32px;
@@ -389,19 +390,19 @@ ul.pageNav li.curPage span {
   font-weight: bold;
   white-space: nowrap;
 }
-/* line 328, ../scss/main.scss */
+/* line 329, ../scss/main.scss */
 .modDropdown ul.mod-thread a {
   padding: 0 0.5em 0 0;
 }
 
 @-moz-keyframes spin {
-  /* line 337, ../scss/main.scss */
+  /* line 338, ../scss/main.scss */
   from {
     -moz-transform: rotate(0deg);
     transform: rotate(0deg);
   }
 
-  /* line 340, ../scss/main.scss */
+  /* line 341, ../scss/main.scss */
   to {
     -moz-transform: rotate(360deg);
     transform: rotate(360deg);
@@ -409,13 +410,13 @@ ul.pageNav li.curPage span {
 }
 
 @-webkit-keyframes spin {
-  /* line 337, ../scss/main.scss */
+  /* line 338, ../scss/main.scss */
   from {
     -webkit-transform: rotate(0deg);
     transform: rotate(0deg);
   }
 
-  /* line 340, ../scss/main.scss */
+  /* line 341, ../scss/main.scss */
   to {
     -webkit-transform: rotate(360deg);
     transform: rotate(360deg);
@@ -423,13 +424,13 @@ ul.pageNav li.curPage span {
 }
 
 @-o-keyframes spin {
-  /* line 337, ../scss/main.scss */
+  /* line 338, ../scss/main.scss */
   from {
     -o-transform: rotate(0deg);
     transform: rotate(0deg);
   }
 
-  /* line 340, ../scss/main.scss */
+  /* line 341, ../scss/main.scss */
   to {
     -o-transform: rotate(360deg);
     transform: rotate(360deg);
@@ -437,13 +438,13 @@ ul.pageNav li.curPage span {
 }
 
 @-ms-keyframes spin {
-  /* line 337, ../scss/main.scss */
+  /* line 338, ../scss/main.scss */
   from {
     -ms-transform: rotate(0deg);
     transform: rotate(0deg);
   }
 
-  /* line 340, ../scss/main.scss */
+  /* line 341, ../scss/main.scss */
   to {
     -ms-transform: rotate(360deg);
     transform: rotate(360deg);
@@ -451,18 +452,18 @@ ul.pageNav li.curPage span {
 }
 
 @keyframes spin {
-  /* line 337, ../scss/main.scss */
+  /* line 338, ../scss/main.scss */
   from {
     transform: rotate(0deg);
   }
 
-  /* line 340, ../scss/main.scss */
+  /* line 341, ../scss/main.scss */
   to {
     transform: rotate(360deg);
   }
 }
 
-/* line 345, ../scss/main.scss */
+/* line 346, ../scss/main.scss */
 .popupContainer {
   text-align: center;
   position: fixed;
@@ -475,7 +476,7 @@ ul.pageNav li.curPage span {
   z-index: 9998;
 }
 
-/* line 357, ../scss/main.scss */
+/* line 358, ../scss/main.scss */
 .popup {
   padding: 1em;
   width: 80%;
@@ -487,34 +488,34 @@ ul.pageNav li.curPage span {
   background: #eee;
 }
 
-/* line 368, ../scss/main.scss */
+/* line 369, ../scss/main.scss */
 .popupCloseLink {
   font-size: 0.75em;
 }
-/* line 371, ../scss/main.scss */
+/* line 372, ../scss/main.scss */
 .popupCloseLink:before {
   margin-top: 2em;
   content: '\a';
   display: block;
 }
 
-/* line 378, ../scss/main.scss */
+/* line 379, ../scss/main.scss */
 table {
   width: 100%;
 }
 
-/* line 386, ../scss/main.scss */
+/* line 387, ../scss/main.scss */
 a[target="_blank"]:after {
   content: " " url("data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAoAAAAKBAMAAAB/HNKOAAAAD1BMVEX///////////////////+Rd1MVAAAABHRSTlMAaeRqY+AomwAAADNJREFUeF4lxIEJACAMBLErdACRjuIAX/n9Z7IghEDYhlwkcGe7Z+Xac4cLnVKjkOCzLR6tNQaTLNDT1wAAAABJRU5ErkJggg==");
   white-space: pre;
 }
 
-/* line 392, ../scss/main.scss */
+/* line 393, ../scss/main.scss */
 a.sprite[target="_blank"]:after {
   display: none;
 }
 
-/* line 396, ../scss/main.scss */
+/* line 397, ../scss/main.scss */
 .login {
   width: 154px;
   height: 23px;
@@ -525,7 +526,7 @@ a.sprite[target="_blank"]:after {
   color: transparent;
 }
 
-/* line 406, ../scss/main.scss */
+/* line 407, ../scss/main.scss */
 .curse {
   font-weight: bold;
   -webkit-filter: blur(1px);
@@ -535,7 +536,7 @@ a.sprite[target="_blank"]:after {
   text-shadow: 0 0 0.25em #ccc, 0 0 0.5em #ccc;
 }
 
-/* line 413, ../scss/main.scss */
+/* line 414, ../scss/main.scss */
 input {
   background: url(../images/noiseGrey.png) repeat left center #e9e9e9;
   border-style: solid;
@@ -548,7 +549,7 @@ input {
   border-width: 2px 0px 0px 1px;
 }
 
-/* line 418, ../scss/main.scss */
+/* line 419, ../scss/main.scss */
 textarea {
   background: url(../images/noiseGrey.png) repeat left center #e9e9e9;
   border-style: solid;
@@ -561,7 +562,7 @@ textarea {
   border-width: 3px 0px 0px 2px;
 }
 
-/* line 423, ../scss/main.scss */
+/* line 424, ../scss/main.scss */
 input[type="submit"], button {
   padding: 0.5em 1em;
   border-style: solid;
@@ -576,7 +577,7 @@ input[type="submit"], button {
   margin: 0 0 2px 0;
   vertical-align: top;
 }
-/* line 430, ../scss/main.scss */
+/* line 431, ../scss/main.scss */
 input[type="submit"]:focus, button:focus {
   border-style: solid;
   border-color: #e0e0e0;
