--- a/media/scss/main.scss
+++ b/media/scss/main.scss
@@ -70,6 +70,7 @@ h2 {
   margin: 0 0 0.5em 0;
   float: left;
   clear: both;
+  color: #555;
 
   a {
     color: #767676;
@@ -406,8 +407,8 @@ a.sprite[target="_blank"]:after {
 .curse {
   font-weight: bold;
   @include filter(blur(1px));
-  color:transparent;
-  text-shadow:0 0 0.25em #ccc, 0 0 0.5em #ccc;
+  color: transparent;
+  text-shadow: 0 0 0.25em #ccc, 0 0 0.5em #ccc;
 }
 
 input {
