added login info at top

--- a/media/css/threads.css
+++ b/media/css/threads.css
@@ -7,8 +7,8 @@
 */
 /* line 4, ../scss/threads.scss */
 .page-thread > .modDropdown {
-  right: 12px;
-  position: absolute;
+  float: right;
+  clear: both;
 }
 
 /* line 10, ../scss/threads.scss */
