--- a/media/css/header.css
+++ b/media/css/header.css
@@ -152,3 +152,42 @@ ul.topNav:before {
   position: absolute;
   display: inline-block;
 }
+
+/* line 232, ../scss/header.scss */
+ul.welcome {
+  float: right;
+  display: inline-block;
+  margin: 0;
+  padding: 0;
+  font-size: 0.85em;
+  line-height: 1.76471;
+}
+/* line 240, ../scss/header.scss */
+ul.welcome li {
+  display: inline-block;
+}
+/* line 243, ../scss/header.scss */
+ul.welcome li a {
+  color: #545d63;
+  margin: 0 0.25em;
+  font-weight: bold;
+}
+/* line 250, ../scss/header.scss */
+ul.welcome li + li ~ li:before {
+  content: ' | ';
+}
+/* line 254, ../scss/header.scss */
+ul.welcome li:first-child {
+  margin-right: 1.5em;
+}
+/* line 258, ../scss/header.scss */
+ul.welcome .avatar {
+  vertical-align: middle;
+  height: 16px;
+  width: 16px;
+  margin-right: 4px;
+}
+/* line 266, ../scss/header.scss */
+ul.welcome input[type="submit"]:focus {
+  border-width: none;
+}
