--- a/media/scss/header.scss
+++ b/media/scss/header.scss
@@ -229,40 +229,45 @@ ul.topNav {
 //  }
 //}
 //
-//ul.welcome {
-//  float: right;
-//  display: inline-block;
-//  margin: 0;
-//  padding: 0;
-//  font-size: 0.85em;
-//
-//  li {
-//    display: inline-block;
-//
-//    a {
-//      color: #545d63;
-//      margin: 0 0.25em;
-//      font-weight: bold;
-//    }
-//  }
-//
-//  li + li ~ li:before {
-//    content: ' | ';
-//  }
-//
-//  li:first-child {
-//    margin-right: 1.5em;
-//  }
-//
-//  .avatar {
-//    vertical-align: middle;
-//    height: 16px;
-//    width: 16px;
-//    margin-right: 4px;
-//
-//  }
-//
-//}
+ul.welcome {
+  float: right;
+  display: inline-block;
+  margin: 0;
+  padding: 0;
+  font-size: 0.85em;
+  line-height: (1/0.85 * 1.5);
+
+  li {
+    display: inline-block;
+
+    a {
+      color: #545d63;
+      margin: 0 0.25em;
+      font-weight: bold;
+    }
+  }
+
+  li + li ~ li:before {
+    content: ' | ';
+  }
+
+  li:first-child {
+    margin-right: 1.5em;
+  }
+
+  .avatar {
+    vertical-align: middle;
+    height: 16px;
+    width: 16px;
+    margin-right: 4px;
+
+  }
+
+  input[type="submit"]:focus{
+    border-width: none;
+  }
+
+}
 //
 //h2 {
 //  color: #565656;
