--- a/media/css/header.css
+++ b/media/css/header.css
@@ -90,20 +90,9 @@ ul.topNav li a {
 }
 /* line 86, ../scss/header.scss */
 ul.topNav li a:hover {
-  background: url(../images/noiseGrey.png) repeat left center #e9e9e9;
+  background: url(../images/noiseGreyMedium.png) repeat left center #f3f3f3;
   color: #222;
   position: relative;
-}
-/* line 91, ../scss/header.scss */
-ul.topNav li a:hover:before {
-  content: '';
-  background: rgba(0, 0, 0, 0.1);
-  display: block;
-  position: absolute;
-  top: 0;
-  left: 0;
-  height: 1px;
-  width: 100%;
 }
 /* line 128, ../scss/header.scss */
 ul.topNav li.selected a {
