--- a/media/scss/header.scss
+++ b/media/scss/header.scss
@@ -84,20 +84,20 @@ ul.topNav {
       line-height: $liHeight;
 
       &:hover {
-        @include noise(Grey);
+        @include noise(GreyMedium);
         color: #222;
         position: relative;
 
-        &:before {
-          content: '';
-          background:rgba(#000, 0.1);
-          display: block;
-          position: absolute;
-          top: 0;
-          left: 0;
-          height: 1px;
-          width: 100%;
-        }
+        //&:before {
+        //  content: '';
+        //  background:rgba(#000, 0.1);
+        //  display: block;
+        //  position: absolute;
+        //  top: 0;
+        //  left: 0;
+        //  height: 1px;
+        //  width: 100%;
+        //}
 
         //&:before {
         //  content: '';
