--- a/media/css/main.css
+++ b/media/css/main.css
@@ -99,13 +99,14 @@ h2 {
   float: left;
   clear: both;
   color: #555;
+  font-size: 1.8em;
 }
-/* line 75, ../scss/main.scss */
+/* line 76, ../scss/main.scss */
 h2 a {
   color: #767676;
 }
 
-/* line 80, ../scss/main.scss */
+/* line 81, ../scss/main.scss */
 ul.pageNav {
   display: inline-block;
   color: #7d7d7d;
@@ -114,33 +115,33 @@ ul.pageNav {
   padding: 0;
   font-weight: bold;
 }
-/* line 88, ../scss/main.scss */
+/* line 89, ../scss/main.scss */
 ul.pageNav.right {
   float: right;
   position: relative;
   left: 18px;
 }
-/* line 93, ../scss/main.scss */
+/* line 94, ../scss/main.scss */
 ul.pageNav.right li {
   padding: 0 0 0 0.5em;
 }
-/* line 98, ../scss/main.scss */
+/* line 99, ../scss/main.scss */
 ul.pageNav li {
   display: inline-block;
   padding: 0 0.5em 0 0;
   font-size: 0.8em;
 }
-/* line 103, ../scss/main.scss */
+/* line 104, ../scss/main.scss */
 ul.pageNav li a {
   color: #7d7d7d;
 }
-/* line 107, ../scss/main.scss */
+/* line 108, ../scss/main.scss */
 ul.pageNav li a:hover {
   background: url(../images/noiseblue.png) repeat left center #25bfff;
   text-decoration: none;
   color: #fff;
 }
-/* line 114, ../scss/main.scss */
+/* line 115, ../scss/main.scss */
 ul.pageNav li a, ul.pageNav li span {
   display: inline-block;
   padding: 0.5em 0.75em;
@@ -150,20 +151,20 @@ ul.pageNav li a, ul.pageNav li span {
   -o-border-radius: 0.5em;
   border-radius: 0.5em;
 }
-/* line 120, ../scss/main.scss */
+/* line 121, ../scss/main.scss */
 ul.pageNav li.firstPage a:before {
   content: '<< ';
 }
-/* line 123, ../scss/main.scss */
+/* line 124, ../scss/main.scss */
 ul.pageNav li.lastPage a:after {
   content: ' >>';
 }
-/* line 127, ../scss/main.scss */
+/* line 128, ../scss/main.scss */
 ul.pageNav li.curPage span {
   background: url(../images/noiseGreyDark.png) repeat left center #e0e0e0;
 }
 
-/* line 136, ../scss/main.scss */
+/* line 137, ../scss/main.scss */
 .tag-vip:before {
   content: url("../images/tags/vip.png") " ";
   display: inline-block;
@@ -172,7 +173,7 @@ ul.pageNav li.curPage span {
   height: 16px;
 }
 
-/* line 136, ../scss/main.scss */
+/* line 137, ../scss/main.scss */
 .tag-mod:before {
   content: url("../images/tags/mod.png") " ";
   display: inline-block;
@@ -181,7 +182,7 @@ ul.pageNav li.curPage span {
   height: 16px;
 }
 
-/* line 136, ../scss/main.scss */
+/* line 137, ../scss/main.scss */
 .tag-admin:before {
   content: url("../images/tags/admin.png") " ";
   display: inline-block;
@@ -190,7 +191,7 @@ ul.pageNav li.curPage span {
   height: 16px;
 }
 
-/* line 136, ../scss/main.scss */
+/* line 137, ../scss/main.scss */
 .tag-dev:before {
   content: url("../images/tags/dev.png") " ";
   display: inline-block;
@@ -199,7 +200,7 @@ ul.pageNav li.curPage span {
   height: 16px;
 }
 
-/* line 136, ../scss/main.scss */
+/* line 137, ../scss/main.scss */
 .tag-super:before {
   content: url("../images/tags/super.png") " ";
   display: inline-block;
@@ -208,7 +209,7 @@ ul.pageNav li.curPage span {
   height: 16px;
 }
 
-/* line 136, ../scss/main.scss */
+/* line 137, ../scss/main.scss */
 .tag-owner:before {
   content: url("../images/tags/owner.png") " ";
   display: inline-block;
@@ -217,25 +218,25 @@ ul.pageNav li.curPage span {
   height: 16px;
 }
 
-/* line 146, ../scss/main.scss */
+/* line 147, ../scss/main.scss */
 .breadcrumbs {
   margin: 0;
   padding: 0;
   display: inline-block;
   float: left;
 }
-/* line 152, ../scss/main.scss */
+/* line 153, ../scss/main.scss */
 .breadcrumbs li {
   display: inline-block;
   list-style: none;
   padding: 0 1em 0 0;
 }
-/* line 157, ../scss/main.scss */
+/* line 158, ../scss/main.scss */
 .breadcrumbs li a {
   color: #25bfff;
   display: inline-block;
 }
-/* line 161, ../scss/main.scss */
+/* line 162, ../scss/main.scss */
 .breadcrumbs li ~ li:before {
   content: '>';
   color: #555;
@@ -247,7 +248,7 @@ ul.pageNav li.curPage span {
   vertical-align: middle;
 }
 
-/* line 175, ../scss/main.scss */
+/* line 176, ../scss/main.scss */
 #chatbox .chats {
   font-size: 0.75em;
   border: 1px solid #d8d8d8;
@@ -263,12 +264,12 @@ ul.pageNav li.curPage span {
   overflow-x: hidden;
   background: url(../images/noisewhite.png) repeat left center white;
 }
-/* line 188, ../scss/main.scss */
+/* line 189, ../scss/main.scss */
 #chatbox .chat a.userLink {
   height: 15px;
   display: inline-block;
 }
-/* line 192, ../scss/main.scss */
+/* line 193, ../scss/main.scss */
 #chatbox .chat a.userLink:before {
   line-height: 1.0;
   vertical-align: bottom;
@@ -276,15 +277,15 @@ ul.pageNav li.curPage span {
   height: 15px;
   display: none;
 }
-/* line 202, ../scss/main.scss */
+/* line 203, ../scss/main.scss */
 #chatbox .chat-date {
   font-style: italic;
 }
-/* line 206, ../scss/main.scss */
+/* line 207, ../scss/main.scss */
 #chatbox .chat ~ .chat-date {
   margin-top: 1em;
 }
-/* line 210, ../scss/main.scss */
+/* line 211, ../scss/main.scss */
 #chatbox input {
   width: 100%;
   border: 1px solid #d8d8d8;
@@ -299,7 +300,7 @@ ul.pageNav li.curPage span {
   border-radius: 0 0 0.5em 0.5em;
 }
 
-/* line 220, ../scss/main.scss */
+/* line 221, ../scss/main.scss */
 .dimensions {
   position: absolute;
   display: inline-block;
@@ -309,22 +310,22 @@ ul.pageNav li.curPage span {
   padding: 0.5em;
   font-size: 0.8em;
 }
-/* line 229, ../scss/main.scss */
+/* line 230, ../scss/main.scss */
 .dimensions:hover {
   color: #fff;
 }
 
-/* line 234, ../scss/main.scss */
+/* line 235, ../scss/main.scss */
 .tinyImage {
   border: 2px solid #a54;
   cursor: pointer;
 }
-/* line 238, ../scss/main.scss */
+/* line 239, ../scss/main.scss */
 .tinyImage.expanded {
   max-width: none;
 }
 
-/* line 243, ../scss/main.scss */
+/* line 244, ../scss/main.scss */
 .missing42 {
   width: 42px;
   height: 42px;
@@ -332,7 +333,7 @@ ul.pageNav li.curPage span {
   background: url("data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAACoAAAAqAQMAAAD/DVsYAAAABlBMVEX4APgAAAAfdBzzAAAAJUlEQVR4Xs3OoQEAAARFwScZy+p/LAlDEKSrB5HW2tLyghselgat1Xgl/EfvxwAAAABJRU5ErkJggg==") no-repeat;
 }
 
-/* line 250, ../scss/main.scss */
+/* line 251, ../scss/main.scss */
 .missing52 {
   width: 42px;
   height: 42px;
@@ -340,22 +341,22 @@ ul.pageNav li.curPage span {
   background: url("data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAADQAAAA0AQMAAAD/tomoAAAABlBMVEX4APgAAAAfdBzzAAAAKUlEQVR4Xt3PQQkAAAjAwIEBjGR1IxlAUEvoQxjce6DlUrHmZAlXfvtpTQiymQ2xdWAAAAAASUVORK5CYII=") no-repeat;
 }
 
-/* line 259, ../scss/main.scss */
+/* line 260, ../scss/main.scss */
 .modButton.active {
   background: url(../images/noiseblue.png) repeat left center #25bfff;
   z-index: 1000;
 }
 
-/* line 266, ../scss/main.scss */
+/* line 267, ../scss/main.scss */
 .modDropdown {
   display: inline-block;
   position: relative;
 }
-/* line 270, ../scss/main.scss */
+/* line 271, ../scss/main.scss */
 .modDropdown:hover {
   background: url(../images/noiseBlackLight.png) repeat left center #636363;
 }
-/* line 291, ../scss/main.scss */
+/* line 292, ../scss/main.scss */
 .modDropdown ul {
   display: none;
   position: absolute;
@@ -368,7 +369,7 @@ ul.pageNav li.curPage span {
   text-align: left;
   background: #222;
 }
-/* line 305, ../scss/main.scss */
+/* line 306, ../scss/main.scss */
 .modDropdown ul li a {
   color: #fff;
   display: block;
@@ -377,12 +378,12 @@ ul.pageNav li.curPage span {
   background: url(../images/noiseblack.png) repeat left center #3b3b3b;
   line-height: 32px;
 }
-/* line 313, ../scss/main.scss */
+/* line 314, ../scss/main.scss */
 .modDropdown ul li a:hover {
   background: url(../images/noiseblue.png) repeat left center #25bfff;
   text-decoration: none;
 }
-/* line 319, ../scss/main.scss */
+/* line 320, ../scss/main.scss */
 .modDropdown ul li.userActions {
   padding: 0 16px;
   line-height: 32px;
@@ -390,19 +391,19 @@ ul.pageNav li.curPage span {
   font-weight: bold;
   white-space: nowrap;
 }
-/* line 329, ../scss/main.scss */
+/* line 330, ../scss/main.scss */
 .modDropdown ul.mod-thread a {
   padding: 0 0.5em 0 0;
 }
 
 @-moz-keyframes spin {
-  /* line 338, ../scss/main.scss */
+  /* line 339, ../scss/main.scss */
   from {
     -moz-transform: rotate(0deg);
     transform: rotate(0deg);
   }
 
-  /* line 341, ../scss/main.scss */
+  /* line 342, ../scss/main.scss */
   to {
     -moz-transform: rotate(360deg);
     transform: rotate(360deg);
@@ -410,13 +411,13 @@ ul.pageNav li.curPage span {
 }
 
 @-webkit-keyframes spin {
-  /* line 338, ../scss/main.scss */
+  /* line 339, ../scss/main.scss */
   from {
     -webkit-transform: rotate(0deg);
     transform: rotate(0deg);
   }
 
-  /* line 341, ../scss/main.scss */
+  /* line 342, ../scss/main.scss */
   to {
     -webkit-transform: rotate(360deg);
     transform: rotate(360deg);
@@ -424,13 +425,13 @@ ul.pageNav li.curPage span {
 }
 
 @-o-keyframes spin {
-  /* line 338, ../scss/main.scss */
+  /* line 339, ../scss/main.scss */
   from {
     -o-transform: rotate(0deg);
     transform: rotate(0deg);
   }
 
-  /* line 341, ../scss/main.scss */
+  /* line 342, ../scss/main.scss */
   to {
     -o-transform: rotate(360deg);
     transform: rotate(360deg);
@@ -438,13 +439,13 @@ ul.pageNav li.curPage span {
 }
 
 @-ms-keyframes spin {
-  /* line 338, ../scss/main.scss */
+  /* line 339, ../scss/main.scss */
   from {
     -ms-transform: rotate(0deg);
     transform: rotate(0deg);
   }
 
-  /* line 341, ../scss/main.scss */
+  /* line 342, ../scss/main.scss */
   to {
     -ms-transform: rotate(360deg);
     transform: rotate(360deg);
@@ -452,18 +453,18 @@ ul.pageNav li.curPage span {
 }
 
 @keyframes spin {
-  /* line 338, ../scss/main.scss */
+  /* line 339, ../scss/main.scss */
   from {
     transform: rotate(0deg);
   }
 
-  /* line 341, ../scss/main.scss */
+  /* line 342, ../scss/main.scss */
   to {
     transform: rotate(360deg);
   }
 }
 
-/* line 346, ../scss/main.scss */
+/* line 347, ../scss/main.scss */
 .popupContainer {
   text-align: center;
   position: fixed;
@@ -476,7 +477,7 @@ ul.pageNav li.curPage span {
   z-index: 9998;
 }
 
-/* line 358, ../scss/main.scss */
+/* line 359, ../scss/main.scss */
 .popup {
   padding: 1em;
   width: 80%;
@@ -488,34 +489,34 @@ ul.pageNav li.curPage span {
   background: #eee;
 }
 
-/* line 369, ../scss/main.scss */
+/* line 370, ../scss/main.scss */
 .popupCloseLink {
   font-size: 0.75em;
 }
-/* line 372, ../scss/main.scss */
+/* line 373, ../scss/main.scss */
 .popupCloseLink:before {
   margin-top: 2em;
   content: '\a';
   display: block;
 }
 
-/* line 379, ../scss/main.scss */
+/* line 380, ../scss/main.scss */
 table {
   width: 100%;
 }
 
-/* line 387, ../scss/main.scss */
+/* line 388, ../scss/main.scss */
 a[target="_blank"]:after {
   content: " " url("data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAoAAAAKBAMAAAB/HNKOAAAAD1BMVEX///////////////////+Rd1MVAAAABHRSTlMAaeRqY+AomwAAADNJREFUeF4lxIEJACAMBLErdACRjuIAX/n9Z7IghEDYhlwkcGe7Z+Xac4cLnVKjkOCzLR6tNQaTLNDT1wAAAABJRU5ErkJggg==");
   white-space: pre;
 }
 
-/* line 393, ../scss/main.scss */
+/* line 394, ../scss/main.scss */
 a.sprite[target="_blank"]:after {
   display: none;
 }
 
-/* line 397, ../scss/main.scss */
+/* line 398, ../scss/main.scss */
 .login {
   width: 154px;
   height: 23px;
@@ -526,7 +527,7 @@ a.sprite[target="_blank"]:after {
   color: transparent;
 }
 
-/* line 407, ../scss/main.scss */
+/* line 408, ../scss/main.scss */
 .curse {
   font-weight: bold;
   -webkit-filter: blur(1px);
@@ -536,7 +537,7 @@ a.sprite[target="_blank"]:after {
   text-shadow: 0 0 0.25em #ccc, 0 0 0.5em #ccc;
 }
 
-/* line 414, ../scss/main.scss */
+/* line 415, ../scss/main.scss */
 input {
   background: url(../images/noiseGrey.png) repeat left center #e9e9e9;
   border-style: solid;
@@ -549,7 +550,7 @@ input {
   border-width: 2px 0px 0px 1px;
 }
 
-/* line 419, ../scss/main.scss */
+/* line 420, ../scss/main.scss */
 textarea {
   background: url(../images/noiseGrey.png) repeat left center #e9e9e9;
   border-style: solid;
@@ -562,7 +563,7 @@ textarea {
   border-width: 3px 0px 0px 2px;
 }
 
-/* line 424, ../scss/main.scss */
+/* line 425, ../scss/main.scss */
 input[type="submit"], button {
   padding: 0.5em 1em;
   border-style: solid;
@@ -577,7 +578,7 @@ input[type="submit"], button {
   margin: 0 0 2px 0;
   vertical-align: top;
 }
-/* line 431, ../scss/main.scss */
+/* line 432, ../scss/main.scss */
 input[type="submit"]:focus, button:focus {
   border-style: solid;
   border-color: #e0e0e0;
@@ -588,4 +589,101 @@ input[type="submit"]:focus, button:focus {
   border-image: url(../images/noiseGreyDark.png) 2 0 0 1 repeat repeat;
   border-width: 2px 0px 0px 1px;
   margin: 2px 0 0 0;
+}
+
+/* line 438, ../scss/main.scss */
+.admin-form {
+  display: block;
+  clear: both;
+}
+/* line 442, ../scss/main.scss */
+.admin-form input {
+  display: block;
+}
+
+/* line 457, ../scss/main.scss */
+.form-labels {
+  width: 320px;
+  float: left;
+  margin: 20px;
+}
+/* line 462, ../scss/main.scss */
+.form-labels > div {
+  position: relative;
+  overflow: hidden;
+  margin: 1em 0;
+}
+/* line 469, ../scss/main.scss */
+.form-labels .labels input, .form-labels .labels textarea {
+  width: 100%;
+  border-style: solid;
+  border-color: #e0e0e0;
+  -moz-border-image: url(../images/noiseGreyDark.png) 2 2 2 2 repeat repeat;
+  -webkit-border-image: url(../images/noiseGreyDark.png) 2 2 2 2 repeat repeat;
+  -webkit-border-image: url(../images/noiseGreyDark.png) 2 2 2 2 repeat repeat;
+  -o-border-image: url(../images/noiseGreyDark.png) 2 2 2 2 repeat repeat;
+  border-image: url(../images/noiseGreyDark.png) 2 2 2 2 repeat repeat;
+  border-width: 2px 2px 2px 2px;
+  background: url(../images/noisewhite.png) repeat left center white;
+  position: relative;
+  top: 0;
+  left: 0;
+  z-index: 1;
+  padding: 12px;
+  outline: 0;
+}
+/* line 480, ../scss/main.scss */
+.form-labels .labels input:focus, .form-labels .labels input:valid, .form-labels .labels textarea:focus, .form-labels .labels textarea:valid {
+  border-style: solid;
+  border-color: #e0e0e0;
+  -moz-border-image: url(../images/noiseGreyDark.png) 2 2 2 2 repeat repeat;
+  -webkit-border-image: url(../images/noiseGreyDark.png) 2 2 2 2 repeat repeat;
+  -webkit-border-image: url(../images/noiseGreyDark.png) 2 2 2 2 repeat repeat;
+  -o-border-image: url(../images/noiseGreyDark.png) 2 2 2 2 repeat repeat;
+  border-image: url(../images/noiseGreyDark.png) 2 2 2 2 repeat repeat;
+  border-width: 2px 2px 2px 2px;
+  padding: 4px 6px 20px 6px;
+}
+/* line 485, ../scss/main.scss */
+.form-labels .labels input:focus + label, .form-labels .labels input:valid + label, .form-labels .labels textarea:focus + label, .form-labels .labels textarea:valid + label {
+  background: url(../images/noiseGreyDark.png) repeat left center #e0e0e0;
+  color: white;
+  font-size: 70%;
+  padding: 1px 6px;
+  z-index: 2;
+  text-transform: uppercase;
+  top: 100%;
+  margin-top: -16px;
+}
+/* line 496, ../scss/main.scss */
+.form-labels .labels input:focus, .form-labels .labels textarea:focus {
+  border-style: solid;
+  border-color: #25bfff;
+  -moz-border-image: url(../images/noiseblue.png) 2 2 2 2 repeat repeat;
+  -webkit-border-image: url(../images/noiseblue.png) 2 2 2 2 repeat repeat;
+  -webkit-border-image: url(../images/noiseblue.png) 2 2 2 2 repeat repeat;
+  -o-border-image: url(../images/noiseblue.png) 2 2 2 2 repeat repeat;
+  border-image: url(../images/noiseblue.png) 2 2 2 2 repeat repeat;
+  border-width: 2px 2px 2px 2px;
+}
+/* line 500, ../scss/main.scss */
+.form-labels .labels input:focus + label, .form-labels .labels textarea:focus + label {
+  background: url(../images/noiseblue.png) repeat left center #25bfff;
+}
+/* line 505, ../scss/main.scss */
+.form-labels .labels label {
+  transition: background 0.2s, color 0.2s, top 0.2s, bottom 0.2s, right 0.2s, left 0.2s;
+  position: absolute;
+  color: #999;
+  padding: 7px 6px;
+  margin: 0;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+}
+/* line 516, ../scss/main.scss */
+.form-labels .labels textarea {
+  display: block;
+  resize: vertical;
 }
